--- a/.gitignore
+++ b/.gitignore
@@ -6,19 +6,7 @@ Dataset/train/lena.jpg
 Dataset/train/lena.jpg
 result/
 __pycache__/
-gifs_0708/1_ch_normal_kernels.gif
-gifs_0708/1_ch_normal_pca_kernels.gif
-gifs_0708/1ch_sparse_mask_kernels.gif
-gifs_0708/1ch_sparse_mask_pca_kernels.gif
-gifs_0708/4_ch_normal_kernels.gif
-gifs_0708/4_ch_normal_pca_kernels.gif
-gifs_0708/4_ch_sparse_mask_kernels.gif
-gifs_0708/4_ch_sparse_mask_pca_kernels.gif
-gifs_0712/1_ch_normal_kernels.gif
-gifs_0712/1_ch_normal_pca_kernels.gif
-gifs_0712/1ch_sparse_mask_kernels.gif
-gifs_0712/1ch_sparse_mask_pca_kernels.gif
-gifs_0712/4_ch_normal_kernels.gif
-gifs_0712/4_ch_normal_pca_kernels.gif
-gifs_0712/4_ch_sparse_mask_kernels.gif
-gifs_0712/4_ch_sparse_mask_pca_kernels.gif
+/*.png
+/*.jpg
+/*.gif
+/figures
